# echo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
echo/: __init__.py  cli.py  config.py  embed.py  index.py  lsh.py  mcp_server.py  normalize.py  parser.py  report.py  scan.py  storage.py  utils.py  verify.py  watcher.py
scripts/: dev_setup.sh  validate_parser.py
tests/: __init__.py  test_config.py  test_lsh.py  test_mcp_basic.py  test_mcp_standalone.py  test_normalize.py  test_parser.py  test_verify.py
